<resources>
    <string name="app_name">Movie Trailer</string>
    <string name="stream">Stream</string>
    <string name="everywhere">Everywhere</string>
    <string name="play_now">Play now</string>
    <string name="trending">Trending</string>
    <string name="now">Now</string>
    <string name="watch_movies_tv_series">Watch Movies,Tv series,</string>
    <string name="and">and</string>
    <string name="more">more..</string>
    <string name="release_date">Release date</string>
    <string name="genre">Genre</string>
    <string name="synopsis">Synopsis</string>
    <string name="read_more">Read more..</string>
    <string name="related_movies">Related Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_movie">Best Movie</string>
    <string name="find_movies_tv_series">Find Movies, Tv series,</string>
</resources>