<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/view_background2"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/watch_movies_tv_series"
        android:id="@+id/txt1"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/and"
        android:id="@+id/txt2"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/txt1"
        app:layout_constraintLeft_toLeftOf="@id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/more"
        android:id="@+id/txt3"
        android:textColor="@color/items"
        android:layout_marginStart="@dimen/_4sdp"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="@id/txt2"
        app:layout_constraintBottom_toBottomOf="@id/txt2"
        app:layout_constraintLeft_toRightOf="@id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.tabs.TabLayout
        app:tabMode="scrollable"
        app:tabGravity="center"
        android:id="@+id/tabLayout"
        app:tabIndicatorGravity="bottom"
        app:tabIndicatorHeight="@dimen/_1sdp"
        app:tabIndicator="@color/items"
        app:tabTextColor="@color/white"
        app:tabIndicatorAnimationMode="elastic"
        app:tabSelectedTextColor="@color/items"
        android:background="@color/view_background2"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPage"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>