<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/view_background2"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/find_movies_tv_series"
        android:id="@+id/txt1"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/and"
        android:id="@+id/txt2"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/txt1"
        app:layout_constraintLeft_toLeftOf="@id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/more"
        android:id="@+id/txt3"
        android:textColor="@color/items"
        android:layout_marginStart="@dimen/_4sdp"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="@id/txt2"
        app:layout_constraintBottom_toBottomOf="@id/txt2"
        app:layout_constraintLeft_toRightOf="@id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.SearchView
        android:clickable="true"
        android:id="@+id/searchView"
        android:contextClickable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt3"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_searchview"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:id="@+id/recycler"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp"/>
    <ProgressBar
        android:visibility="visible"
        android:id="@+id/progress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>