<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/view_background2"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:id="@+id/stream"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stream"
            android:textColor="@color/items"
            android:textSize="@dimen/_20sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:text="@string/everywhere"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
<androidx.viewpager2.widget.ViewPager2
    app:layout_constraintTop_toBottomOf="@id/stream"
    app:layout_constraintLeft_toLeftOf="parent"
    android:id="@+id/bannerView"
    app:layout_constraintRight_toRightOf="parent"
    android:isScrollContainer="true"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:layout_height="@dimen/_160sdp"/>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:elevation="@dimen/_3sdp"
        android:id="@+id/shimmerStream"
        app:layout_constraintTop_toBottomOf="@id/stream"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp">
        <include layout="@layout/item_shimmer_layout"/>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
        app:layout_constraintTop_toBottomOf="@id/bannerView"
        app:layout_constraintLeft_toLeftOf="@id/bannerView"
        android:layout_marginTop="@dimen/_8sdp"
        app:dotsCornerRadius="8dp"
        app:dotsColor="@color/white"
        app:dotsSize="@dimen/_10sdp"
        android:id="@+id/indicator"
        app:dotsStrokeWidth="@dimen/_1sdp"
        app:layout_constraintRight_toRightOf="@id/bannerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/trending"
        app:layout_constraintTop_toBottomOf="@id/indicator"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
         >
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/trending"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/now"
            android:layout_marginStart="@dimen/_2sdp"
            android:textColor="@color/items"
            android:textSize="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.viewpager2.widget.ViewPager2
        android:clipChildren="false"
        android:paddingStart="@dimen/_50sdp"
        android:paddingEnd="@dimen/_50sdp"
        android:clipToPadding="false"
        android:id="@+id/trendingViewPager"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/trending"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_290sdp"/>
    <com.facebook.shimmer.ShimmerFrameLayout
        android:paddingStart="@dimen/_30sdp"
        android:paddingEnd="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/trending"
        android:id="@+id/shimmerEffect"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp">
        <include layout="@layout/item_shimmer"/>
    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>