<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/view_background2"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingBottom="@dimen/_50sdp"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:id="@+id/layout"
        android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:id="@+id/imageFilm"
        android:src="@drawable/image1"
        android:scaleType="centerCrop"
        android:layout_height="@dimen/_190sdp"/>
     <com.makeramen.roundedimageview.RoundedImageView
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:id="@+id/back"
         android:src="@drawable/ic_baseline_arrow_back"
         android:layout_marginTop="@dimen/_12sdp"
         android:layout_marginStart="@dimen/_12sdp"
         android:layout_width="@dimen/_24sdp"
         android:layout_height="@dimen/_24sdp"/>
        <View
            app:layout_constraintTop_toTopOf="@id/imageFilm"
            app:layout_constraintBottom_toBottomOf="@id/imageFilm"
            android:id="@+id/bg"
            app:layout_constraintLeft_toLeftOf="@id/imageFilm"
            app:layout_constraintRight_toRightOf="@id/imageFilm"
            android:background="@drawable/bg_splash"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_190sdp"/>
        <androidx.appcompat.widget.AppCompatImageView
            app:layout_constraintTop_toTopOf="@id/imageFilm"
            app:layout_constraintBottom_toBottomOf="@id/imageFilm"
            app:layout_constraintLeft_toLeftOf="@id/imageFilm"
            app:layout_constraintRight_toRightOf="@id/imageFilm"
            android:id="@+id/play"
            android:tint="@color/items"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintTop_toBottomOf="@id/imageFilm"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/nameFilm"
            android:text="Star Wars:The Last Jeti"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_time"
            android:id="@+id/icTime"
            app:layout_constraintLeft_toLeftOf="@id/nameFilm"
            app:layout_constraintTop_toBottomOf="@id/nameFilm"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"/>
           <androidx.appcompat.widget.AppCompatTextView
               app:layout_constraintTop_toTopOf="@id/icTime"
               app:layout_constraintBottom_toBottomOf="@id/icTime"
               app:layout_constraintLeft_toRightOf="@id/icTime"
               android:layout_marginStart="@dimen/_5sdp"
               android:text="152 minutes"
               android:id="@+id/timeFilm"
               android:textColor="#BBBBBB"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            app:layout_constraintTop_toTopOf="@id/icTime"
            app:layout_constraintBottom_toBottomOf="@id/icTime"
            app:layout_constraintLeft_toRightOf="@id/timeFilm"
            android:src="@drawable/ic_star3"
            android:id="@+id/icStar"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:textColor="#BBBBBB"
            app:layout_constraintTop_toTopOf="@id/icStar"
            app:layout_constraintBottom_toBottomOf="@id/icStar"
            app:layout_constraintLeft_toRightOf="@id/icStar"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="7.0 (IMDb)"
            android:id="@+id/rateFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_marginTop="@dimen/_11sdp"
            app:layout_constraintTop_toBottomOf="@id/icTime"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:background="#515151"
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintLeft_toLeftOf="@id/view1"
            app:layout_constraintTop_toBottomOf="@id/view1"
            android:layout_marginTop="@dimen/_12sdp"
            android:textSize="@dimen/_16sdp"
            android:text="@string/release_date"
            android:id="@+id/releaseDate"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:textColor="#BBBBBB"
            android:includeFontPadding="false"
            android:id="@+id/releaseDateFilm"
            android:text="December 9,2017"
            android:layout_marginTop="@dimen/_9sdp"
            app:layout_constraintLeft_toLeftOf="@id/releaseDate"
            app:layout_constraintTop_toBottomOf="@id/releaseDate"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:text="@string/genre"
            android:id="@+id/genre"
            app:layout_constraintTop_toTopOf="@id/releaseDate"
            app:layout_constraintLeft_toRightOf="@id/releaseDate"
            app:layout_constraintBottom_toBottomOf="@id/releaseDate"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:layout_constraintLeft_toLeftOf="@id/genre"
            android:layout_width="@dimen/_60sdp"
            android:text="Action"
            android:id="@+id/genre1"
            android:layout_marginTop="@dimen/_6sdp"
            android:includeFontPadding="false"
            android:gravity="center"
            android:textColor="#BBBBBB"
            android:background="@drawable/bg_text"
            android:layout_height="@dimen/_25sdp"/>
        <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintTop_toTopOf="@id/genre1"
            app:layout_constraintBottom_toBottomOf="@id/genre1"
            app:layout_constraintLeft_toRightOf="@id/genre1"
            android:layout_width="@dimen/_60sdp"
            android:text="Action"
            android:layout_marginStart="@dimen/_8sdp"
            android:id="@+id/genre2"
            android:includeFontPadding="false"
            android:gravity="center"
            android:textColor="#BBBBBB"
            android:background="@drawable/bg_text"
            android:layout_height="@dimen/_25sdp"/>
        <View
            android:layout_marginTop="@dimen/_11sdp"
            app:layout_constraintTop_toBottomOf="@id/genre2"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:background="#515151"
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:id="@+id/synopsis"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/view2"
            app:layout_constraintLeft_toLeftOf="@id/view2"
            android:text="@string/synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintLeft_toLeftOf="@id/view2"
            app:layout_constraintRight_toRightOf="@id/view2"
            android:maxLines="5"
            android:ellipsize="end"
            android:text="Salom ALimardon Qlaeysan"
            app:layout_constraintTop_toBottomOf="@id/synopsis"
            android:layout_marginTop="@dimen/_9sdp"
            android:textColor="#BBBBBB"
            android:id="@+id/descriptionFilm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/read_more"
            android:id="@+id/readMore"
            android:textColor="@color/items"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@id/descriptionFilm"
            app:layout_constraintLeft_toLeftOf="@id/descriptionFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/castAndCrew"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/readMore"
            app:layout_constraintLeft_toLeftOf="@id/readMore"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="Cast and Crew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/recyclerActors"
            tools:listitem="@layout/item_genre"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintLeft_toLeftOf="@id/view2"
            app:layout_constraintRight_toRightOf="@id/view2"
            app:layout_constraintTop_toBottomOf="@id/castAndCrew"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/_100sdp"
            android:id="@+id/btnTrailer"
            android:text="trailer"
            app:layout_constraintRight_toLeftOf="@id/movie"
            android:background="@drawable/bg_text"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/recyclerActors"
            app:layout_constraintLeft_toLeftOf="@id/readMore"
            android:textColor="@color/items"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintTop_toTopOf="@id/btnTrailer"
            app:layout_constraintBottom_toBottomOf="@id/btnTrailer"
            app:layout_constraintLeft_toRightOf="@id/btnTrailer"
            android:background="@drawable/bg_text"
            android:textColor="@color/items"
            android:text="Film"
            android:id="@+id/movie"
            app:layout_constraintRight_toRightOf="@id/view2"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"/>
       <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/Movies"
           android:textColor="@color/white"
           android:textSize="@dimen/_16sdp"
           app:layout_constraintTop_toBottomOf="@id/btnTrailer"
           app:layout_constraintLeft_toLeftOf="@id/readMore"
           android:layout_marginTop="@dimen/_12sdp"
           android:text="@string/related_movies"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
       <androidx.recyclerview.widget.RecyclerView
           android:layout_width="0dp"
           android:layout_marginTop="@dimen/_5sdp"
           android:id="@+id/recyclerSmilarFilms"
           tools:listitem="@layout/item_smilar"
           android:orientation="horizontal"
           app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
           app:layout_constraintLeft_toLeftOf="@id/view2"
           app:layout_constraintRight_toRightOf="@id/view2"
           app:layout_constraintTop_toBottomOf="@id/Movies"
           android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/item_shimmer_detail"/>
    </com.facebook.shimmer.ShimmerFrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>